finishing up arrangements
