# swagger.json
@@ -195,7 +195,7 @@
             "example": "Hunger Games Medley"
           },
           {
-            "name": "name",
+            "name": "composer",
             "in": "formData",
             "required": true,
             "type": "string",
@@ -232,6 +232,12 @@
             "in": "formData",
             "required": true,
             "type": "integer",
+            "enum": [
+              1,
+              2,
+              3,
+              4
+            ],
             "format": "int32",
             "minimum": 1,
             "maximum": 4,
@@ -262,6 +268,12 @@
             "name": "mp3Recording",
             "in": "formData",
             "required": false,
+            "type": "file"
+          },
+          {
+            "name": "coverImage",
+            "in": "formdata",
+            "required": true,
             "type": "file"
           }
         ],
